update overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@
 }
 
 .ql-toolbar.ql-snow + .ql-container.ql-snow {
-  min-height: 150px !important;
+  min-height: 120px !important;
   border-top: 1px solid #ccc !important;
-  padding-bottom: 20px !important;
+  padding-bottom: 40px !important;
 }
